[package]
name = "epub_reader_cli"
version = "0.1.0"
edition = "2021"
authors = ["Juan-luke Klopper"]

[dependencies]
clap = { version = "4.5.19", features = ["derive"] }
crossterm = "0.28.1"
epub = "2.1.2"
ratatui = "0.28.1"
rayon = "1.10.0"
scraper = "0.20.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
